[package]
name = "git-glance"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
git2 = "0.19.0"
anyhow = "1.0.86"
octocrab = "0.38.0"
colored = "2.1.0"
indicatif = "0.17.8"
console = "0.15.8"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
