[package]
name = "git-glance"
version = "0.1.0"
edition = "2021"
authors = ["Scott Chacon <schacon@email.com>"]
license = "MIT"
description = "AI assisted GitHub PR-based Git changelog generator"
readme = "README.md"
homepage = "https://github.com/schacon/git-glance"
repository = "https://github.com/schacon/git-glance"
keywords = ["cli", "changelog", "git"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
git2 = "0.19.0"
anyhow = "1.0.86"
colored = "2.1.0"
indicatif = "0.17.8"
console = "0.15.8"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
openai-api-rs = "4.1.1"
chrono = "0.4.38"
